# ddd-kafka-microservices

./: .env  .env.example  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
app/: settings.py
app/application/api/: main.py  schemas.py
app/application/api/user/: schemas.py  user_router.py
app/domain/entities/: base.py  user.py
app/domain/events/: base.py  users.py
app/domain/exceptions/: base.py  email.py
app/domain/values/: base.py  email.py
app/infra/db/: mongodb.py
app/infra/exceptions/: users.py
app/infra/users/: converters.py  mongodb.py
app/logic/: mediator.py  punq.py
app/logic/commands/: base.py  users.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py
app/tests/: conftest.py  fixtures.py
app/tests/domain/: test_email.py  test_entities.py
app/tests/infra/: test_users.py
docker_compose/: app.yml  storages.yml
